--- a/arednsig/html/arednsig.html
+++ b/arednsig/html/arednsig.html
@@ -96,7 +96,7 @@ span.selectorElement {
 <body onload="main()">
 
 <div class="mainContainer">
-<h2><a href="https://github.com/fractalxaos/arednsig" 
+<h2><a href="https://github.com/fractalxaos/ham/tree/master/arednsig" 
   style="text-decoration:none" target="_new">
 KA7JLO Aredn Node Signal</a></h2>
 <h3>Last Updated</h3>
@@ -161,7 +161,8 @@ Data updates every: <span id="period"></span> minutes
 <b>NOTES:</b>
 <ul>
 <li>Aredn Node Signal software available at
-<a href="https://github.com/fractalxaos/arednsig" target="_new">
+<a href="https://github.com/fractalxaos/ham/tree/master/arednsig"
+ target="_new">
 <i>Github.com</i></a>.</li>
 <li>Project sponsored by 
 <a href="https://willamettevalleymesh.net" TARGET="_NEW">
