--- a/arednsig/html/arednsig.html
+++ b/arednsig/html/arednsig.html
@@ -98,7 +98,7 @@ span.selectorElement {
 <div class="mainContainer">
 <h2><a href="https://github.com/fractalxaos/ham/tree/master/arednsig" 
   style="text-decoration:none" target="_new">
-KA7JLO Aredn Node Signal</a></h2>
+KA7JLO AREDN<sup>&#174;</sup> Node Signal</a></h2>
 <h3>Last Updated</h3>
 <div class="datetime">
 <span id="date"></span>
