--- a/nodepower/html/power.html
+++ b/nodepower/html/power.html
@@ -100,10 +100,10 @@ text.chartNav {
 <h2><a href="https://github.com/fractalxaos/ham/tree/master/nodepower" 
 style="text-decoration:none" target="_new">
 Node Power</a></h2>
-<h4>YOUR NODE DESCRIPTION AND CALL SIGN</h4>
+<h4>WA7ABU Victor Point AREDN Mesh Installation</h4>
 
 <div style="width:60%; text-align:left; font:14px arial, sans-serif;">
-This web page shows the power consumption of the above node.  Charts below
+This web page shows the power consumption of above node(s).  Charts below
 provide a historical glimpse of node power consumption, battery and ambient
 temperatures.
 </div>
@@ -135,8 +135,8 @@ Battery Temperature:<br>
 Ambient Temperature:
 </div>
 <div class="dataItems"  style="width: 30%;">
-<text id="battemp"></text> &#8451;<br>
-<text id="ambtemp"></text> &#8451;<br>
+<text id="battemp"></text> &#8457;<br>
+<text id="ambtemp"></text> &#8457;<br>
 </div>
 </div>
 </div>
