--- a/nodepower/html/power.html
+++ b/nodepower/html/power.html
@@ -240,6 +240,10 @@ Status:
 <a href="https://github.com/fractalxaos/ham/tree/master/nodepower" target="_new">
 <i>Github.com</i>
 </a>.</li>
+<li>Project plans and software also available via the mesh
+<a href="http://ka7jlo-web.local.mesh/file-manager/files/KA7JLO/Apps/nodepower/nodepower.zip" target="_new">
+<i>here</i>
+</a>.</li>
 <li>Project plans include detailed instructions on how to use a Raspberry
     Pi Zero to add power bus and battery temperature monitoring 
     for your AREDN node.</li>
